# ag2-persona

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  pypi-publish.yml
ag2_persona/: __init__.py  async_persona_builder.py  parsers.py  persona_agent.py  persona_builder.py  py.typed
docs/: README.md  api.md  examples.md  getting-started.md  index.md
examples/: README.md  construction_team.py
tests/: test_async_persona_builder.py  test_factory_methods.py  test_persona_agent.py  test_persona_builder_markdown.py
